# Sea-Battle

./: .gitignore  game_sessions.db  pyproject.toml  Структура проекта.txt
client/: client.py  game.py  main.py  menu.py  utils.py
server/: database.py  server.py
testData/: Структура проекта.txt
